# eg-cpp-library

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  compile_flags.txt  configure.sh  cpp.sublime-project  cpp.sublime-workspace  readme.md
.github/workflows/: gh-pages.yml
cmake/InstallFiles/: Config.cmake.in  ConfigVersion.cmake.in
cmake/Modules/: Armadillo.cmake  OpenBLAS.cmake
cmake_aux/InstallFiles/: EgCppConfig.cmake.in
cmake_aux/Modules/: DetectHDF5.cmake  FindArmadillo.cmake
docs/: 404.html  classes.html  classexample_1_1_linear_regression_model-members.html  en.search-data.min.0db16fbc7ceaffaf38e8e6bcbaea78f7a47ac9cef4a0de0143413476417bc363.js  en.search-data.min.4f9009bdfaf39818e9f2ea2d20a97adac0cae917edca354737ea03f006298b32.js  en.search.min.d82570e5f6f8a22c608abf3758fcfff8d8ce2152e207672043d32aafb7374ed6.js  en.search.min.e3fedb1c13f3f2cc30b8f2c8ab61ffcebc985befe098cc33a6e907287ba73f81.js  files.html  graph_legend.html  index.html  index.xml  linear__regression__model_8cpp__incl.map  namespaces.html  random__walk_8cpp__incl.map  random__walk_8cpp__incl.md5  random__walk_8h.html  random__walk_8h__incl.md5  random__walk_8h_source.html
docs-doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions_func.html  functions_vars.html  index.html  linear__regression__model_8cpp.html  linear__regression__model_8cpp__incl.md5  linear__regression__model_8h__incl.map  namespaceexample.html  namespacemembers.html  random__walk_8cpp.html  random__walk_8h__incl.map
docs-doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  functions_1.js  functions_3.js  searchdata.js
docs-doxygen/xml/: classexample_1_1_linear_regression_model.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_8f2980731aba7ec7b9fcae5764f196e3.xml  dir_e5b5d92a17ead9a8b10414e7c30597b7.xml  index.xml  linear__regression__model_8cpp.xml  random__walk_8cpp.xml  random__walk_8h.xml
docs/categories/: index.html  index.xml
docs/classes/: index.html
docs/content/Classes/: classexample_1_1_linear_regression_model.md
docs/content/Files/: _index.md  dir_e5b5d92a17ead9a8b10414e7c30597b7.md  random__walk_8cpp.md  random__walk_8h.md
docs/content/Modules/: _index.md
docs/content/Namespaces/: namespaceexample.md
docs/docs/: index.html
docs/docs/api/: index.html
docs/docs/api/classes/: index.html
docs/docs/api/classes/classexample_1_1_linear_model/: index.html
docs/docs/api/classes/classexample_1_1_poisson_model/: index.html
docs/docs/api/examples/: index.html
docs/docs/api/files/: index.html
docs/docs/api/namespaces/: index.html  index.xml
docs/docs/api/pages/: index.html
docs/examples/: index.xml
docs/files/: index.html
docs/files/dir_e5b5d92a17ead9a8b10414e7c30597b7/: index.html
docs/html/: annotated.html  classexample_1_1_linear_regression_model.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_e5b5d92a17ead9a8b10414e7c30597b7.html  functions.html  linear__regression__model_8h.html  linear__regression__model_8h__incl.md5  linear__regression__model_8h_source.html  namespacemembers_func.html
docs/html/search/: all_6.js  files_0.js  files_1.js  functions_2.js  namespaces_0.js
docs/namespaces/: index.html
docs/search/: all_3.js  all_5.js  classes_0.js  functions_0.js  functions_4.js  variables_0.js
docs/tags/: index.html  index.xml
docs/tags/page/1/: index.html
docs/xml/: dir_4fef79e7177ba769987a8da36c892c5f.xml  linear__regression__model_8h.xml  namespaceexample.xml
examples/: CMakeLists.txt  example1.cpp  example_program_1.cpp
include/: eg_cpp  eg_cpp.in  eg_cpp_config.cmake  egcpp.in  lds_sys.hpp
include/eg_cpp_h/: example.hpp  lds_sys.hpp
include/egcpp_h/: linear_model.h  linear_regression_model.h  poisson_model.h  random_walk.h
misc/: config.pc.in  doxybook-hugo-config.json  egcpp.pc.in  hugo-config.json
misc/docs-hugo/: config-book.toml  config-learn.yaml  config.toml
misc/docs-hugo/content/: _index.md
misc/docs-hugo/content/docs/: _index.md  model.md
misc/docs-hugo/content/menu/: index.md
misc/docs-hugo/public/: 404.html  en.search-data.min.39c9ed18f5dc134e75aaa75e38e14337135961f3e6248c76187f77cc7f3b2367.js  en.search-data.min.c91cf6e468538a46c3d539201d147ceed8394f4f8da24216629d5f73bd79de48.js  en.search.min.6f75dd5cb9209b9043d87f754f288cf1a64eb205d13d0ab39c9b80d42c5bf792.js  en.search.min.c1e23dfe3ca1e317cc21bb2300980a400393399eab595edfabfc074778c70f01.js  index.html  manifest.json  sitemap.xml
misc/docs-hugo/public/categories/: index.html  index.xml
misc/docs-hugo/public/classes/: index.xml
misc/docs-hugo/public/docs/: index.html
misc/docs-hugo/public/examples/: index.html
misc/docs-hugo/public/files/: index.xml
misc/docs-hugo/public/modules/: index.html  index.xml
misc/docs-hugo/public/namespaces/: index.xml
misc/docs-hugo/public/pages/: index.html  index.xml
misc/docs-hugo/public/tags/: index.html
misc/doxybook-templates/: index.tmpl
misc/hugo-docs/: config-book.yaml
misc/hugo-docs/content/Classes/: _index.md
misc/hugo-docs/content/Examples/: _index.md
misc/hugo-docs/content/Files/: dir_4fef79e7177ba769987a8da36c892c5f.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md  dir_8f2980731aba7ec7b9fcae5764f196e3.md  linear__regression__model_8cpp.md  linear__regression__model_8h.md
misc/hugo-docs/content/Namespaces/: _index.md
misc/hugo-docs/content/Pages/: _index.md
misc/hugo-docs/public/: 404.html  index.html  index.xml  sitemap.xml
misc/hugo-docs/public/categories/: index.html
misc/hugo-docs/public/docs/: index.html  index.xml
misc/hugo-docs/public/menu/: index.html
misc/hugo-docs/public/tags/: index.html  index.xml
misc/test-cmake-installation/: CMakeLists.txt
misc/test-cmake-installation/src/: main.cpp
scripts/: convert-doxygen-to-md.sh  generate-lib-sourcelist.sh  generate_lib_sourcelist.sh
src/: CMakeLists.txt  example.cpp  lds_sys.cpp  linear_model.cpp  linear_regression_model.cpp  main.cpp  poisson_model.cpp  random_walk.cpp  some_other_sourcefile.cpp  sourcelist.txt
test-cmake-installation/: CMakeLists.txt
(+100 files in other folders)
